# frechet-ir

./: .gitignore  README.md  pyproject.toml
src/frechet_ir/: __init__.py  curve_frechet.py  embedding.py  evaluation.py  frechet.py  loader.py  model.py  session_fd.py
